--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Meeting agenda web app.",
   "main": "mr-server.js",
   "dependencies": {
-    "MD5": "^1.0.3",
-    "dateformat": "^1.0.6-1.2.3",
-    "extend": "^1.1.3",
-    "node-uuid": "^1.4.0",
-    "mysql": "^2.0.0-alpha7",
-    "socket.io": "^0.9.13",
-    "nodemailer": "^0.4.1",
-    "underscore": "^1.4.4",
-    "request": "^2.16.6",
-    "ws": "^0.4.25"
+    "scrypt": "^6.0.3",
+    "dateformat": "^1.0.12",
+    "extend": "^1.3.0",
+    "mysql": "^2.11.1",
+    "node-uuid": "^1.4.7",
+    "nodemailer": "^0.4.4",
+    "request": "^2.74.0",
+    "socket.io": "^0.9.17",
+    "underscore": "^1.8.3",
+    "ws": "^0.4.32"
   },
   "devDependencies": {},
   "scripts": {
